@@ -1,19 +1,20 @@
 package cc.ddrpa.fixa;
 
-import org.roaringbitmap.IntConsumer;
-import org.roaringbitmap.RoaringBitmap;
-
 import java.time.Duration;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.StreamSupport;
+import org.roaringbitmap.IntConsumer;
+import org.roaringbitmap.RoaringBitmap;
 
 /**
  * FixaCalendar was mainly used to calculate workdays and holidays.
  */
 public class FixaCalendar {
+
     // 存储周末
     private final RoaringBitmap weekendMap = RoaringBitmap.bitmapOf();
     // 存储节日
@@ -23,6 +24,61 @@ public class FixaCalendar {
     // 非工作日计算方法
     // day-off = weekend + holiday - flexibleWorkday
     private final RoaringBitmap dayOffMap = RoaringBitmap.bitmapOf();
+
+    /**
+     * Construct a new FixaCalendar with default settings
+     * <ul>
+     * <li>Weekend means Saturday and Sunday.</li>
+     * <li>Use last Saturday for weekend calculation.</li>
+     * <li>Calculate the next 5 years' weekends.</li>
+     * </ul>
+     * <p>
+     * 使用默认设置构造一个新的 FixaCalendar，具有如下行为
+     * <ul>
+     *     <li>周末为周六和周日</li>
+     *     <li>使用上周六作为周末计算的起始日期</li>
+     *     <li>计算接下来 5 年的周末</li>
+     * </ul>
+     */
+    public FixaCalendar() {
+        new FixaCalendar(FixaWeekendEnum.SATURDAY_AND_SUNDAY, LocalDate.now(),
+            Duration.ofDays(365 * 5));
+    }
+
+    /**
+     * Construct a new FixaCalendar with given settings
+     * <p>
+     * 构造一个新的 FixaCalendar
+     *
+     * @param weekend         weekend type
+     * @param setWeekendAfter use this date as the starting date for weekend calculation
+     * @param duration        calculate the weekends for the next duration days
+     */
+    public FixaCalendar(FixaWeekendEnum weekend, LocalDate setWeekendAfter, Duration duration) {
+        if (duration.isNegative()) {
+            throw new IllegalArgumentException("Negative duration is not supported right now.");
+        }
+        int durationInDays = Math.toIntExact(duration.toDays());
+        int dayOfWeek = setWeekendAfter.getDayOfWeek().getValue();
+        int startPos = Math.toIntExact(setWeekendAfter.toEpochDay());
+        int[] weekendPos;
+        if (weekend.isSingleDayWeekend()) {
+            startPos = startPos - dayOfWeek - 4 + weekend.getCode();
+            weekendPos = IntStream.iterate(startPos, i -> i + 7)
+                .limit(durationInDays / 7)
+                .toArray();
+        } else if (weekend.isDoubleDayWeekend()) {
+            startPos = startPos - dayOfWeek - 2 + weekend.getCode();
+            weekendPos = IntStream.iterate(startPos, i -> i + 7)
+                .limit(durationInDays / 7)
+                .flatMap(i -> IntStream.of(i, i + 1))
+                .toArray();
+        } else {
+            throw new IllegalArgumentException("Invalid weekend type.");
+        }
+        weekendMap.add(weekendPos);
+        dayOffMap.add(weekendPos);
+    }
 
     /**
      * whether given date is a workday
@@ -87,12 +143,12 @@ public class FixaCalendar {
     /**
      * Returns the number of whole working days between startDate and endDate
      * <p>
-     * Should behaves like
-     * <a href="https://support.microsoft.com/en-us/office/networkdays-function-48e717bf-a7a3-495f-969e-5005e3eb18e7">
+     * Should behaves like <a
+     * href="https://support.microsoft.com/en-us/office/networkdays-function-48e717bf-a7a3-495f-969e-5005e3eb18e7">
      * NETWORKDAYS(start_date, end_date) function in Microsoft Excel</a>
      * <p>
-     * 返回给定日期范围内的工作日数量（包括开始和结束日期），行为应该类似于 Microsoft Excel 中的
-     * <a href="https://support.microsoft.com/en-us/office/networkdays-function-48e717bf-a7a3-495f-969e-5005e3eb18e7">
+     * 返回给定日期范围内的工作日数量（包括开始和结束日期），行为应该类似于 Microsoft Excel 中的 <a
+     * href="https://support.microsoft.com/en-us/office/networkdays-function-48e717bf-a7a3-495f-969e-5005e3eb18e7">
      * NETWORKDAYS(start_date, end_date)</a> 函数
      *
      * @param startDate start date(included)
@@ -103,9 +159,9 @@ public class FixaCalendar {
         if (startDate.isAfter(endDate)) {
             throw new IllegalArgumentException("StartDate should be before endDate");
         }
-        var startPos = startDate.toEpochDay();
-        var endPos = endDate.toEpochDay() + 1;
-        var cardinality = dayOffMap.rangeCardinality(startPos, endPos);
+        long startPos = startDate.toEpochDay();
+        long endPos = endDate.toEpochDay() + 1;
+        long cardinality = dayOffMap.rangeCardinality(startPos, endPos);
         return Math.toIntExact(endPos - startPos - cardinality);
     }
 
@@ -128,13 +184,13 @@ public class FixaCalendar {
     /**
      * Returns a date that is the indicated number of working days after the starting date
      * <p>
-     * Should behaves like
-     * <a href="https://support.microsoft.com/en-us/office/workday-function-f764a5b7-05fc-4494-9486-60d494efbf33">
+     * Should behaves like <a
+     * href="https://support.microsoft.com/en-us/office/workday-function-f764a5b7-05fc-4494-9486-60d494efbf33">
      * WORKDAY(start_date, end_date) function in Microsoft Excel</a>
      * <p>
-     * 返回给定日期之后的第 n 个工作日，行为应该类似于 Microsoft Excel 中的
-     * <a href="https://support.microsoft.com/en-us/office/workday-function-f764a5b7-05fc-4494-9486-60d494efbf33">
-     *  WORKDAY(start_date, end_date)</a> 函数
+     * 返回给定日期之后的第 n 个工作日，行为应该类似于 Microsoft Excel 中的 <a
+     * href="https://support.microsoft.com/en-us/office/workday-function-f764a5b7-05fc-4494-9486-60d494efbf33">
+     * WORKDAY(start_date, end_date)</a> 函数
      *
      * @param startDate start date
      * @param duration  represent the number of non-weekend and non-holiday days after start_date.
@@ -142,7 +198,7 @@ public class FixaCalendar {
      * @return the date
      */
     public LocalDate workday(LocalDate startDate, Duration duration) {
-        var length = duration.toDays();
+        long length = duration.toDays();
         long startPos = startDate.toEpochDay();
         long possibleEndPos = startPos + length;
         // RoaringBitmap::rangeCardinality calculate cardinality between [start, end)
@@ -171,15 +227,15 @@ public class FixaCalendar {
         if (duration.isNegative()) {
             throw new IllegalArgumentException("Negative duration is not supported right now.");
         }
-        var startPos = Math.toIntExact(startDate.toEpochDay());
-        var length = Math.toIntExact(duration.toDays());
+        int startPos = Math.toIntExact(startDate.toEpochDay());
+        int length = Math.toIntExact(duration.toDays());
         List<Integer> bits = new ArrayList<>(length);
         // RoaringBitmap::forEachInRange calculate retrieve values between [start, end)
         // get [start, end] by using [start, end + 1)
         dayOffMap.forEachInRange(startPos, length + 1, new FixaDateConsumer(bits));
         return bits.stream()
-                .map(LocalDate::ofEpochDay)
-                .toList();
+            .map(LocalDate::ofEpochDay)
+            .collect(Collectors.toList());
     }
 
     /**
@@ -188,20 +244,20 @@ public class FixaCalendar {
      * 给定起始日期和结束日期，返回在这段时间内的非工作日列表
      *
      * @param startDate start date(included)
-     * @param endDate end date(included)
+     * @param endDate   end date(included)
      * @return
      */
     public List<LocalDate> dayOffs(LocalDate startDate, LocalDate endDate) {
         if (startDate.isAfter(endDate)) {
             throw new IllegalArgumentException("StartDate should be before endDate");
         }
-        var startPos = Math.toIntExact(startDate.toEpochDay());
-        var length = Math.toIntExact(endDate.toEpochDay()) + 1 - startPos;
+        int startPos = Math.toIntExact(startDate.toEpochDay());
+        int length = Math.toIntExact(endDate.toEpochDay()) + 1 - startPos;
         List<Integer> bits = new ArrayList<>(length);
         dayOffMap.forEachInRange(startPos, length, new FixaDateConsumer(bits));
         return bits.stream()
-                .map(LocalDate::ofEpochDay)
-                .toList();
+            .map(LocalDate::ofEpochDay)
+            .collect(Collectors.toList());
     }
 
     /**
@@ -213,61 +269,8 @@ public class FixaCalendar {
      * @return
      */
     public LocalDate nextDayOff(LocalDate startDate) {
-        return LocalDate.ofEpochDay(dayOffMap.nextValue(Math.toIntExact(startDate.toEpochDay()) + 1));
-    }
-
-    /**
-     * Construct a new FixaCalendar with default settings
-     * <ul>
-     * <li>Weekend means Saturday and Sunday.</li>
-     * <li>Use last Saturday for weekend calculation.</li>
-     * <li>Calculate the next 5 years' weekends.</li>
-     * </ul>
-     * <p>
-     * 使用默认设置构造一个新的 FixaCalendar，具有如下行为
-     * <ul>
-     *     <li>周末为周六和周日</li>
-     *     <li>使用上周六作为周末计算的起始日期</li>
-     *     <li>计算接下来 5 年的周末</li>
-     * </ul>
-     */
-    public FixaCalendar() {
-        new FixaCalendar(FixaWeekendEnum.SATURDAY_AND_SUNDAY, LocalDate.now(), Duration.ofDays(365 * 5));
-    }
-
-    /**
-     * Construct a new FixaCalendar with given settings
-     * <p>
-     * 构造一个新的 FixaCalendar
-     *
-     * @param weekend weekend type
-     * @param setWeekendAfter use this date as the starting date for weekend calculation
-     * @param duration calculate the weekends for the next duration days
-     */
-    public FixaCalendar(FixaWeekendEnum weekend, LocalDate setWeekendAfter, Duration duration) {
-        if (duration.isNegative()) {
-            throw new IllegalArgumentException("Negative duration is not supported right now.");
-        }
-        var durationInDays = Math.toIntExact(duration.toDays());
-        var dayOfWeek = setWeekendAfter.getDayOfWeek().getValue();
-        var startPos = Math.toIntExact(setWeekendAfter.toEpochDay());
-        int[] weekendPos;
-        if (weekend.isSingleDayWeekend()) {
-            startPos = startPos - dayOfWeek - 4 + weekend.getCode();
-            weekendPos = IntStream.iterate(startPos, i -> i + 7)
-                    .limit(durationInDays / 7)
-                    .toArray();
-        } else if (weekend.isDoubleDayWeekend()) {
-            startPos = startPos - dayOfWeek - 2 + weekend.getCode();
-            weekendPos = IntStream.iterate(startPos, i -> i + 7)
-                    .limit(durationInDays / 7)
-                    .flatMap(i -> IntStream.of(i, i + 1))
-                    .toArray();
-        } else {
-            throw new IllegalArgumentException("Invalid weekend type.");
-        }
-        weekendMap.add(weekendPos);
-        dayOffMap.add(weekendPos);
+        return LocalDate.ofEpochDay(
+            dayOffMap.nextValue(Math.toIntExact(startDate.toEpochDay()) + 1));
     }
 
     /**
@@ -280,10 +283,10 @@ public class FixaCalendar {
      * @param loop      how many holidays need to add
      */
     public void addRecurringHolidays(LocalDate startDate, int interval, int loop) {
-        var startPos = Math.toIntExact(startDate.toEpochDay());
-        var bits = IntStream.range(0, loop)
-                .map(i -> startPos + i * interval)
-                .toArray();
+        int startPos = Math.toIntExact(startDate.toEpochDay());
+        int[] bits = IntStream.range(0, loop)
+            .map(i -> startPos + i * interval)
+            .toArray();
         holidayMap.add(bits);
         dayOffMap.add(bits);
     }
@@ -296,9 +299,26 @@ public class FixaCalendar {
      * @param date date to add
      */
     public void addHoliday(LocalDate date) {
-        var pos = Math.toIntExact(date.toEpochDay());
+        int pos = Math.toIntExact(date.toEpochDay());
         holidayMap.add(pos);
         dayOffMap.add(pos);
+    }
+
+    /**
+     * Add multiple dates as holidays
+     * <p>
+     * 使用开始日期和结束日期添加多个节假日
+     *
+     * @param firstDay first day of holiday
+     * @param lastDay  last day of holiday
+     */
+    public void addHolidays(LocalDate firstDay, LocalDate lastDay) {
+        int[] bits = IntStream.rangeClosed(
+                Math.toIntExact(firstDay.toEpochDay()),
+                Math.toIntExact(lastDay.toEpochDay()))
+            .toArray();
+        holidayMap.add(bits);
+        dayOffMap.add(bits);
     }
 
     /**
@@ -309,11 +329,11 @@ public class FixaCalendar {
      * @param dates dates to add
      */
     public void addHolidays(Iterable<LocalDate> dates) {
-        var bits = StreamSupport.stream(dates.spliterator(), false)
-                .map(LocalDate::toEpochDay)
-                .mapToInt(Math::toIntExact)
-                .sorted()
-                .toArray();
+        int[] bits = StreamSupport.stream(dates.spliterator(), false)
+            .map(LocalDate::toEpochDay)
+            .mapToInt(Math::toIntExact)
+            .sorted()
+            .toArray();
         holidayMap.add(bits);
         dayOffMap.add(bits);
     }
@@ -330,9 +350,26 @@ public class FixaCalendar {
      * @param date date to add
      */
     public void addFlexibleWorkday(LocalDate date) {
-        var pos = Math.toIntExact(date.toEpochDay());
+        int pos = Math.toIntExact(date.toEpochDay());
         flexibleWorkdayMap.add(pos);
         dayOffMap.remove(pos);
+    }
+
+    /**
+     * Add multiple dates as flexible workdays
+     * <p>
+     * 使用开始日期和结束日期添加多个调休产生的工作日
+     *
+     * @param firstDay first day of flexible workday
+     * @param lastDay  last day of flexible workday
+     */
+    public void addFlexibleWorkdays(LocalDate firstDay, LocalDate lastDay) {
+        int[] bits = IntStream.rangeClosed(
+                Math.toIntExact(firstDay.toEpochDay()),
+                Math.toIntExact(lastDay.toEpochDay()))
+            .toArray();
+        flexibleWorkdayMap.add(bits);
+        dayOffMap.andNot(flexibleWorkdayMap);
     }
 
     /**
@@ -343,11 +380,11 @@ public class FixaCalendar {
      * @param dates
      */
     public void addFlexibleWorkdays(Iterable<LocalDate> dates) {
-        var bits = StreamSupport.stream(dates.spliterator(), false)
-                .map(LocalDate::toEpochDay)
-                .mapToInt(Math::toIntExact)
-                .sorted()
-                .toArray();
+        int[] bits = StreamSupport.stream(dates.spliterator(), false)
+            .map(LocalDate::toEpochDay)
+            .mapToInt(Math::toIntExact)
+            .sorted()
+            .toArray();
         flexibleWorkdayMap.add(bits);
         dayOffMap.andNot(flexibleWorkdayMap);
     }
@@ -364,6 +401,7 @@ public class FixaCalendar {
     }
 
     private final class FixaDateConsumer implements IntConsumer {
+
         List<Integer> presentDates;
 
         public FixaDateConsumer(List<Integer> presentDates) {
